--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url 'https://jitpack.io' }
     }
 
     dependencies {
@@ -35,5 +36,7 @@ repositories {
 
 dependencies {
     compile 'com.facebook.react:react-native:+'
-    compile "net.openid:appauth:0.7.1"
+    // NOTE: We are using a forked version of "net.openid:appauth:0.7.1"
+    // compile "net.openid:appauth:0.7.1"
+    compile 'com.github.FreebirdRides:AppAuth-Android:0c72fc3'
 }
